# odoo11-dev-env

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
etc/: odoo.conf
